tests/snapshots/examples_fixtures/diagnostics_demos__errors__invalid_pattern_error.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/invalid_pattern_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E016]: Invalid Pattern

Catch-all patterns must be the final match arm.

  examples/diagnostics_demos/errors/invalid_pattern_error.flx:3:5
  |
3 |     _ -> 1,
  |     ^

Hint:
  Move `_` or the binding pattern to the last arm.


Warning: Redundant Match Arm

this arm is unreachable — earlier arms already cover it

  examples/diagnostics_demos/errors/invalid_pattern_error.flx:4:5
  |
4 |     1 -> 2,
  |     ^^^^^^


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  examples/diagnostics_demos/errors/invalid_pattern_error.flx:6:1
  |
6 | print(x);
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/diagnostics_demos/errors/invalid_pattern_error.flx:6:1
  |
6 | print(x);
  | ^^^^^^^^^
  | --------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `Console` but the enclosing context does not provide it

  examples/diagnostics_demos/errors/invalid_pattern_error.flx:6:1
  |
6 | print(x);
  | ^^^^^^^^
  | -------- requires `Console`

Hint:
  annotate the enclosing function with `with Console`

Found 4 errors and 1 warning.
== stdout ==
<not executed>
